kubernetes/overlays/homelab/infrastructure/gateway-api/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: homelab-gateway
  namespace: default
  labels:
    app.kubernetes.io/name: gateway
    app.kubernetes.io/instance: homelab
    app.kubernetes.io/component: gateway
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: argocd
spec:
  gatewayClassName: cilium
  infrastructure:
    parametersRef:
      group: cilium.io
      kind: CiliumGatewayClassConfig
      name: homelab-gateway-config
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: argocd-homelab-local-tls
          - group: ""
            kind: Secret
            name: homelab-wildcard-tls
      allowedRoutes:
        namespaces:
          from: All
